# testrail-api-wrapper

./: .gitignore  .landscape.yml  .travis.yml  ACKNOWLEDGEMENTS.rst  ChangeLog  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: Makefile  adding-updating.rst  conf.py  credentials.rst  index.rst  make.bat  quick-reference.rst
docs/source/: conf.py  index.rst
examples/: add_milestone_with_sub_milestone.py  case_types_get.py  configs_get.py  priorities_get.py  project_add_update_delete.py  statuses_get.py  templates_get.py  tests_get.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_const.py  test_package_init.py  test_sessions.py  test_utils.py
tests/models/: test_case.py  test_case_fields.py  test_case_type.py  test_configs.py  test_milestone.py  test_model_base.py  test_priorities.py  test_project.py  test_result.py  test_run.py  test_section.py  test_status.py  test_statuses.py  test_suite.py  test_template.py  test_test.py  test_user.py
traw/: __init__.py  api.py  cli.py  client.py  const.py  exceptions.py  sessions.py  utils.py
traw/models/: __init__.py  case.py  case_field.py  case_type.py  config.py  milestone.py  model_base.py  plan.py  posters.py  priority.py  project.py  result.py  run.py  section.py  status.py  suite.py  template.py  test.py  user.py
