[metadata]
name = traw
author = Levi Noecker
author-email = levi.noecker@gmail.com
summary = TestRail API Wrapper
description-file = README.rst
home-page = https://github.com/levi-rs/testrail-api-wrapper
license = MIT
keywords = testrail client api wrapper traw
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True

[build_sphinx]
all_files = 1
builders = html,man
build-dir = docs/build
source-dir = docs/source

[files]
packages =
    traw

[wheel]
universal = 1
